<resources>
    <string name="app_name">laboratorio04</string>
    <string name="nombre">Nombre</string>
    <string name="rellena_la_siguiente_ninformacion">Rellena la siguiente \ninformacion</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="name">Nombre</string>
    <string name="n_mero_de_tel_fono">Número de teléfono</string>
    <string name="confirma_tu_informaci_n">Confirma tu información</string>
    <string name="n_mero">Número de teléfono</string>
    <string name="correo">Correo electrónico</string>
    <string name="nombree">nombre</string>
    <string name="compartir">COMPARTIR</string>
    <string name="guardar">GUARDAR</string>
    <string name="confirmar">Confirmar tu informacion</string>
    <string name="nombre2">Nombre</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="n_mero_telefonico">Número telefonico</string>
    <string name="compartir1">Compartir</string>
</resources>